<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_empty_" translatable="false"> </string>
    <string name="app_name" translatable="false">Lifeograph</string>
    <string name="program_name">Lifeograph for Android</string>
    <string name="release_code_name" translatable="false">The Squirrel Princess</string>

    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_today">Entry to Today</string>
    <string name="add_parent">Add Parent</string>
    <string name="add_sibling">Add Sibling</string>
    <string name="add_child">Add Child</string>
    <string name="apply">Apply</string>
    <string name="authenticate">Authenticate</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="default_">Default</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="format">Format</string>
    <string name="go">Go</string>
    <string name="list">List</string>
    <string name="none">None</string>
    <string name="open">Open</string>
    <string name="purchase">Buy Ad-free Version</string>
    <string name="rename">Rename</string>
    <string name="set_password">Set Password</string>
    <string name="settings">Settings</string>
    <string name="show">Show</string>

    <string name="active_filter">Active Filter</string>
    <string name="todo_status">Todo status</string>
    <string name="search_hint">Search text</string>
    <string name="list_type">Change List Item Type</string>

    <string name="password">Password</string>
    <string name="confirm">Confirm</string>

    <string name="diary">Diary</string>
    <string name="entry">Entry</string>
    <string name="tag_ctg">Tag Category</string>
    <string name="tag">Tag</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="set_theme">Set Theme</string>
    <string name="untagged">Untagged</string>
    <string name="chapter_ctg">Chapter Category</string>
    <string name="chapter">Dated Chapter</string>
    <string name="filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="chart">Chart</string>
    <string name="charts">Charts</string>
    <string name="table">Table</string>

    <string name="new_diary">New Diary</string>
    <string name="upgrade_diary">Upgrade The Diary</string>
    <string name="new_chapter">New Chapter</string>
    <string name="new_chart">New Chart</string>
    <string name="new_filter">New Filter</string>
    <string name="new_tag_ctg">New Tag Category</string>

    <string name="open_entry">Open entry</string>

    <string name="create_diary">Enter a name for the new diary</string>
    <string name="create_entry">Create entry</string>
    <string name="create_filter">Create filter</string>
    <string name="create_chart">Create chart</string>
    <string name="create_chapter">Create chapter</string>
    <string name="create_theme">Create Theme</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit_tags">Edit Tags</string>

    <string name="duplicate_entry">Duplicate Entry</string>
    <string name="duplicate_filter">Duplicate Filter</string>
    <string name="duplicate_chart">Duplicate Chart</string>
    <string name="duplicate_theme">Duplicate Theme</string>

    <string name="rename_chapter_ctg">Rename Chapter Category</string>
    <string name="rename_chapter">Rename Chapter</string>

    <string name="dismiss_ctg_and_tags">Dismiss with Tags</string>
    <string name="remove_tag">Remove Tags</string>
    <string name="change_value">Change Value</string>

    <string name="entries">Entries</string>
    <string name="tags">Tags</string>
    <string name="chapters">Chapters</string>
    <string name="free_chapters">Free Chapters</string>
    <string name="numbered_chapters">Numbered Chapters</string>
    <string name="dated_chapters">Dated Chapters</string>
    <string name="favorites">Favorites</string>

    <string name="search">Search</string>
    <string name="no_matches">No matches</string>
    <string name="matches">Matches</string>
    <string name="all_entries">All Entries</string>
    <string name="entry_last_changed_on">Changed:</string>

    <string name="add_password">Encrypt Diary</string>
    <string name="change_password">Change Password</string>
    <string name="wrong_password">Wrong password</string>

    <string name="continue_from_lock_prompt">The diary is locked. Do you want to continue
        editing from the lock file?</string>
    <string name="continue_from_lock">Continue from Lock</string>
    <string name="discard_lock">Discard Lock</string>
    <string name="logoutwosaving">Close without Saving</string>
    <string name="logoutwosaving_confirm">Are you sure you want to close the diary without
        saving?</string>
    <string name="export_plain_text">Export Plain Text</string>
    <string name="entry_dismiss_confirm">Are you sure you want to dismiss the current entry?</string>
    <string name="tag_dismiss_confirm">Are you sure you want to dismiss the current tag?</string>
    <string name="tag_ctg_dismiss_confirm">Are you sure you want to dismiss the selected
        tag category?</string>
    <string name="tag_ctg_dismiss_with_entries_confirm">Are you sure you want to dismiss the
        selected tag category along with the tags in it?</string>
    <string name="chapter_dismiss_confirm">Are you sure you want to dismiss the current chapter?</string>
    <string name="chapter_ctg_dismiss_confirm">Are you sure you want to dismiss the selected
        chapter category?</string>
    <string name="diary_upgrade_confirm">Are you sure you want to upgrade the diary?</string>
    <string name="storage_not_available">External storage is not available or read-only</string>
    <string name="filter_saved">Filter state will be saved with the diary</string>
    <string name="resorting_to_read_only">File is not writable, opening read-only&#8230;</string>
    <string name="text_export_success">Successfully exported the diary into backups
        directory</string>
    <string name="text_export_fail">Failed to export the diary</string>

    <string name="filter_tags">Filter or create</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="change_sorting">Change Sorting Type</string>
    <string name="empty_entry">&lt;empty entry&gt;</string>
    <string name="edit_date">Edit Date/Number</string>
    <string name="edit_theme">Edit Theme</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="toggle_favorite">Toggle Favoredness</string>
    <string name="change_todo_status">Change Todo Status</string>
    <string name="todo_auto">Auto</string>
    <string name="todo_not">Not To Do</string>
    <string name="todo_open">To Do</string>
    <string name="todo_progressed">In Progress</string>
    <string name="todo_done">Done</string>
    <string name="todo_canceled">Canceled</string>
    <string name="todo_open_icon">[ ] To Do</string>
    <string name="todo_progressed_icon">[~] In Progress</string>
    <string name="todo_done_icon">[+] Done</string>
    <string name="todo_canceled_icon">[x] Canceled</string>
    <string name="bullet">Bullet</string>
    <string name="placeholder" translatable="false">.p.</string>
    <string name="icon">icon</string>
    <string name="copyright" translatable="false">&#169; 2012&#8211;2026, Ahmet Öztürk</string>
    <string name="bullet_icon">•</string>
    <string name="numbered_item_icon">#- Number</string>

    <string name="text_color">Normal text</string>
    <string name="base_color">Background</string>
    <string name="heading_color">Heading</string>
    <string name="subheading_color">Subheading</string>
    <string name="highlight_color">Highlight</string>

    <string name="bold">B</string>
    <string name="italic">I</string>
    <string name="underline">U</string>
    <string name="strikethrough">S</string>
    <string name="highlight">H</string>

    <string name="ignore">Ignore</string>

    <string name="welcome">Welcome!</string>
    <!--string name="caution_not_final">PLEASE KEEP IN MIND THAT THIS IS A BETA VERSION</string-->
    <string name="diaries">Diaries</string>
    <!--string name="import_sms">Import SMS</string-->
    <string name="website"><a href="http://lifeograph.sourceforge.net">web site</a></string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="unitless">Unitless</string>
    <string name="read_only">Read-Only</string>
    <string name="Lifeograph" translatable="false">Lifeograph</string>
    <string name="add_filterer">Add filterer</string>
    <string name="filter_status">Status</string>
    <string name="filter_is">Is Entry</string>
    <string name="filter_favorite">Is Favorite</string>
    <string name="filter_trashed">Trashed</string>
    <string name="filterer_status_title">Status:</string>
    <string name="filterer_is_title">Is Entry:</string>
    <string name="filterer_has_tag">Has tag:</string>
    <string name="paragraph">Paragraph</string>
    <string name="list_letter_capital">A-</string>
    <string name="list_roman_capital">I-</string>
    <string name="list_number">1-</string>
    <string name="list_bullet">•</string>
    <string name="name_only">Name Only</string>
    <string name="name_description">Name - Description</string>
    <string name="number_name">Number - Name</string>
    <string name="date_name">Date - Name</string>
    <string name="milestone">Milestone</string>
    <string name="faded">F</string>

    <string-array name="array_filter_trash">
        <item>All Entries</item>
        <item>Not Trashed Entries</item>
        <item>Trashed Entries</item>
    </string-array>

    <string-array name="array_filter_favorite">
        <item>All Entries</item>
        <item>Only Regular Entries</item>
        <item>Only Favorite Entries</item>
    </string-array>

    <string-array name="array_tag_types">
        <item>Boolean (Classic)</item>
        <item>Cumulative</item>
        <item>Average</item>
    </string-array>

    <!--string-array name="array_new_entry_types">
        <item>on Today</item>
        <item>Free Entry</item>
        <item>Numbered Entry</item>
    </string-array-->

    <string-array name="array_tag_units" translatable="false">
        <item>km</item>
        <item>mi</item>
        <item>kg</item>
        <item>lb</item>
        <item>L</item>
        <item>°C</item>
        <item>°F</item>
    </string-array>

</resources>
