<?xml version="1.0" encoding="utf-8"?>

<!-- ***************************************************************************

Copyright (C) 2012-2015 Ahmet Öztürk (aoz_2@yahoo.com)

This file is part of Lifeograph.

Lifeograph is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Lifeograph is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Lifeograph.  If not, see <http://www.gnu.org/licenses/>.

**************************************************************************** -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/button_list_none"
          android:title="@string/none" />
    <item android:id="@+id/button_list_bullet"
          android:title="@string/bullet_icon" />
    <item android:id="@+id/button_list_to_do"
          android:title="@string/todo_open_icon" />
    <item android:id="@+id/button_list_progressed"
          android:title="@string/todo_progressed_icon" />
    <item android:id="@+id/button_list_done"
          android:title="@string/todo_done_icon" />
    <item android:id="@+id/button_list_canceled"
          android:title="@string/todo_canceled_icon" />
    <item android:id="@+id/button_list_numbered"
          android:title="@string/numbered_item_icon" />

</menu>
