<?xml version="1.0" encoding="utf-8"?>

<!-- ***************************************************************************

    Copyright (C) 2012-2021 Ahmet Öztürk (aoz_2@yahoo.com)

    This file is part of Lifeograph.

    Lifeograph is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Lifeograph is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Lifeograph.  If not, see <http://www.gnu.org/licenses/>.

**************************************************************************** -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/oodiary_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diaries"
            android:icon="@drawable/ic_diary"
            android:title="@string/diaries" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
    </group>

    <group
        android:id="@+id/withindiary_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_entries"
            android:icon="@drawable/icon_entry"
            android:title="@string/entries" />
        <item
            android:id="@+id/nav_filters"
            android:icon="@drawable/ic_filter"
            android:title="@string/filters" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_chart"
            android:title="@string/charts" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_theme"
            android:title="@string/themes" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_diary"
            android:title="@string/about" />
    </group>
</menu>
