<?xml version="1.0" encoding="utf-8"?>

<!-- ***************************************************************************

    Copyright (C) 2012-2016 Ahmet Öztürk (aoz_2@yahoo.com)

    This file is part of Lifeograph.

    Lifeograph is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Lifeograph is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Lifeograph.  If not, see <http://www.gnu.org/licenses/>.

**************************************************************************** -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/new_diary"
          android:title="@string/new_diary"
          android:icon="@drawable/ic_action_add"
          android:orderInCategory="90"
          compat:showAsAction="ifRoom|withText" />
    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:orderInCategory="100"
          compat:showAsAction="never" />
    <item android:id="@+id/purchase"
          android:title="@string/purchase"
          android:orderInCategory="100"
          compat:showAsAction="never" />
    <item android:id="@+id/about"
          android:title="@string/about"
          android:orderInCategory="100"
          compat:showAsAction="never" />
</menu>
