<?xml version="1.0" encoding="utf-8"?>

<!-- ***************************************************************************

    Copyright (C) 2012-2021 Ahmet Öztürk (aoz_2@yahoo.com)

    This file is part of Lifeograph.

    Lifeograph is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Lifeograph is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Lifeograph.  If not, see <http://www.gnu.org/licenses/>.

**************************************************************************** -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_text_color"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/text_color"
            android:contentDescription="@string/text_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_base_color"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/base_color"
            android:contentDescription="@string/base_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_heading_color"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/heading_color"
            android:contentDescription="@string/heading_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_subheading_color"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/subheading_color"
            android:contentDescription="@string/subheading_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_highlight_color"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:text="@string/highlight_color"
            android:contentDescription="@string/highlight_color"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/reset_to_default"
        android:id="@+id/button_theme_reset"/>

</LinearLayout>
